Fix weird scrollbars.

--- a/css/style.css
+++ b/css/style.css
@@ -118,7 +118,6 @@ input.search {
 div.inputs {
   margin-bottom: 2em;
   display: block;
-  overflow: auto;
   clear: both; }
 
 div.filter-section {
