--- a/src/_forms.scss
+++ b/src/_forms.scss
@@ -20,7 +20,7 @@ input.search {
 div.inputs {
 	margin-bottom: 2em;
 	display: block;
-	overflow:auto;
+	// overflow:auto;
 	clear: both;
 }
 
